# FriedMusic-desktop--

./: .gitignore  CMakeLists.txt  FriedMusic-desktop++.code-workspace  main.cpp  prerequisite.txt
cmake/Modules/: FindLIBVLC.cmake
lib/FriedMusic/: Client.cpp  Client.hpp  Config.cpp  Config.h  Data.cpp  Data.hpp  Database.cpp  Database.hpp  Library.hpp  Logging.h  SoundMaker.cpp  SoundMaker.hpp  SoundMakerVLC.hpp  StandartGlobalUser.cpp  StandartGlobalUser.hpp  StringMethods.h  globals.cpp  globals.h  macro.cpp  macro.hpp  version.h
lib/FriedMusic/ui/: MainWindow.hpp  ui.hpp
lib/FriedMusic/ui/ui_widgets/: Finder.ui  PlaylistLine.ui  Settings.ui  TrackLine.ui  playerWidget.ui  statusBar.ui  ui_Finder.h  ui_Settings.h  ui_playerWidget.h  ui_statusBar.h
lib/FriedMusic/ui/widgets/: Finder.h  Modals.h  Player.h  PlaylistLine.h  Settings.h  StatusBar.h  TrackLine.h  TrackList.h
resource/: defaultConfig.json  logo.png~  style.qss
